--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
-spring.jpa.database=postgesql
+# Database conection and login
+spring.datasource.url=jdbc:postgresql://localhost:5455/easysell
+spring.datasource.username=app
+spring.datasource.password=app2022
 
+#database name
+spring.jpa.database=postgresql
+
+#thymeleaf configs
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
+#spring dev tools config
 spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src
+
+#spring hibernate
+spring.jpa.hibernate.ddl-auto=update
 
 
