--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   app:
     container_name: spring
-    image: imrayh/spring
+    build: .
     ports:
       - "8080:8080"
     depends_on:
