--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "2.4"
-x-database-variables: &database-variables
-  SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/easysell
-  SPRING_DATASOURCE_USERNAME: app
-  SPRING_DATASOURCE_PASSWORD: app2022
+version: "3.3"
+#x-database-variables: &database-variables
+#  SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/easysell
+#  SPRING_DATASOURCE_USERNAME: app
+#  SPRING_DATASOURCE_PASSWORD: app2022
 
 services:
   db:
